@@ -61,3 +61,9 @@ compileJava {
 compileTestJava {
     options.compilerArgs += ["--enable-preview"]
 }
+
+run {
+    maxHeapSize = "128m"
+    jvmArgs += ["--enable-preview"]
+    mainClassName = 'ru.vk.itmo.test.osipovdaniil.Server'
+}
